--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h2>cd</h2>
     <h4>La navigation d’un répertoire à un autre s’effectue avec la commande <strong><i>cd</i></strong> succédée du nom du répertoire.</h4>
     <p><code>cd /</code> Permet de se retrouver à la racine du disque.</p>
-    <p><code>cd /home/</code> ou <code>cd ~</code> Accéder directement au répertoire de l’utilisateur.</p>
+    <p><code>cd ~</code> ou <code>cd</code> Accéder directement au répertoire de l’utilisateur.</p>
     <p><code>cd /var/www/</code> Aller dans le répertoire /var/www.</p>
     <p><code>cd ..</code> Remonter dans le répertoire parent à partir de là où vous êtes.</p>
     <p><code>cd -</code> Permet de revenir au répertoire précédent.</p>
@@ -96,15 +96,15 @@
     <a name="cp"></a>
     <h2>cp</h2>
     <h4>Pour créer une copie d’un fichier, on utilise la commande <strong><i>cp</i></strong>.</h4>
-    <p><code>cp foo/bar.txt baz/bar.txt</code> Copier le fichier bar.txt dans le répertoire baz.<p>
-    <p><code>cp -r foo/ baz/</code>Copier des répertoires entiers.</p>
+    <p><code>cp foo/bar.txt baz/</code> Copier le fichier bar.txt dans le répertoire baz.<p>
+    <p><code>cp -r foo/ baz/</code> Copier des répertoires entiers (note : si baz existe, la cible sera baz/foo/).</p>
   </div>
 
   <div id="mv" class="block block-mv blue">
     <a name="mv"></a>
     <h2>mv</h2>
     <h4>Déplacer un fichier est aussi simple que de le copier, pour cela il faut utiliser la commande <strong><i>mv</i></strong>. Cette commande permet aussi de renommer vos fichiers.</h4>
-    <p><code>mv foo/bar.txt baz/bar.txt</code> Déplacer le fichier bar.txt dans le répertoire baz.</p>
+    <p><code>mv foo/bar.txt baz/</code> Déplacer le fichier bar.txt dans le répertoire baz.</p>
     <p><code>mv foo_bar.txt foo_baz.txt</code> Renommer le fichier foo_bar.txt en foo_baz.txt.</p>
   </div>
 
@@ -112,9 +112,9 @@
     <a name="rm"></a>
     <h2>rm</h2>
     <h4>Pour effacer un fichier ou un répertoire on utilise la commande <strong><i>rm</i></strong>.</h4>
-    <p><code>*.txt</code> Supprimer tous les fichiers ayant pour extension txt.</p>
+    <p><code>rm *.txt</code> Supprimer tous les fichiers ayant pour extension txt.</p>
     <p><code>rm foo.txt bar.txt</code> Supprimer les fichiers foo.txt et bar.txt.</p>
-    <p><code>rm -rf baz/</code> Supprimer tous les fichiers contenus dans le répertoire baz.</p>
+    <p><code>rm -rf baz/</code> Supprimer le répertoire baz et tout son contenu.</p>
   </div>
 
   <div id="mkdir" class="block block-mkdir white">
@@ -163,10 +163,10 @@
   <div id="packages" class="block block-packages light-green">
     <a name="packages"></a>
     <h2>Packages</h2>
-    <h4>L'installation et la désinstallation de paquets peut se faire grâce à la commande <strong><i>apt</i></strong>.</h4>
+    <h4>L'installation et la désinstallation de paquets sous Debian, Ubuntu et distribution dérivées peut se faire grâce à la commande <strong><i>apt</i></strong>.</h4>
     <p><code>apt-get update</code> Mettre à jour la liste des fichiers disponibles dans les dépôts APT.</p>
     <p><code>apt-get install samba</code> Installer du paquet Samba.</p>
-    <p><code>apt-getp install foo=2.2-1</code> Installer du paquet foo dans sa version 2.2-1.</p>
+    <p><code>apt-get install foo=2.2-1</code> Installer du paquet foo dans sa version 2.2-1.</p>
     <p><code>apt-get remove samba</code> Désinstallation du paquet Samba tout en laissant les fichiers de configuration.</p>
     <p><code>apt-get purge samba</code> Suppression complète du paquet Samba et de ses fichiers de configuration.</p>
     <p><code>apt-cache policy php5</code> Récupération d'informations sur l'état du paquet php5</p>
@@ -187,10 +187,10 @@
     <a name="scp"></a>
     <h2>scp</h2>
     <h4>La commande <strong><i>scp</i></strong> permet de copier des fichiers entre le serveur et le client ssh de manière sécurisée.</h4>
-    <p><code>scp foo.txt john@remotehost.example.com:</code> Transfert le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>
-    <p><code>scp john@remotehost.example.com:foo.txt</code> Récupère le fichier foo.txt situé dans le home du répertoire du compte john pour le copier dans le répertoire courant.</p>
-    <p><code>scp john@remotehost.example.com:/backups/*.sql backups/</code> Récupèrer les fichiers .sql situés dans le répertoire backups pour le copier dans le sous-répertoire backups.</p>
-    <p><code>scp -r mails/ john@remotehost.example.com:/mails</code> Transfert l'intégralité du répertoire mails vers la machine remotehost.example.com.</p>
+    <p><code>scp foo.txt john@remotehost.example.com:</code> Transfère le fichier foo.txt situé dans le répertoire courant vers le home du compte john de la machine remotehost.example.com.</p>
+    <p><code>scp john@remotehost.example.com:foo.txt ./</code> Récupère le fichier foo.txt situé dans le home du répertoire du compte john pour le copier dans le répertoire courant.</p>
+    <p><code>scp john@remotehost.example.com:/backups/*.sql backups/</code> Récupérer les fichiers .sql situés dans le répertoire backups pour le copier dans le sous-répertoire backups.</p>
+    <p><code>scp -r mails/ john@remotehost.example.com:</code> Transfère l'intégralité du répertoire mails.</p>
   </div>
 
   <div id="rsync" class="block block-rsync brown">
@@ -202,14 +202,15 @@
       <dd><i>-a</i>: copie de manière récursive tout en préservant les permissions et les dates des fichiers.</dd>
       <dd><i>-z</i>: compresse les données avant le transfert.</dd>
       <dd><i>-v</i>: affiche tout ce qui se passe pendant le transfert.</dd>
-      <dd><i>-e</i>: TODO</dd>
+      <dd><i>-n</i>: permet de tester la commande (<em>dry-run</em>).</dd>
       <dd><i>--delete</i>: efface les fichiers qui n'existent pas chez l'émetteur</dd>
       <dd><i>--exclude=MOTIF</i>: exclut les fichiers correspondant au motif</dd>
     </dl>
-    <p><code>rsync sources/files destination/files</code> Synchroniser les fichiers sources vers une destination.</p>
-    <p><code>rsync -azv john@remotehost.example.com:files/ destination/files</code> TODO.</p>
-    <p><code>rsync -azv --delete sources/files destination/files</code> Synchroniser tous les fichiers, supprime aussi les fichiers qui n'existent plus sur la source.</p>
+    <p><code>rsync source/ destination/</code> Synchroniser les fichiers sources vers une destination.</p>
+    <p><code>rsync -azv john@remotehost.example.com:source/ destination/</code> Récupère les nouveaux fichiers et fichiers modifiés du répertoire distant vers le répertoire local.</p>
+    <p><code>rsync -azv --delete source/ destination/</code> Synchroniser tous les fichiers, supprime aussi les fichiers qui n'existent plus sur la source.</p>
     <p><code>rsync -azv --exclude="dump/*.sql.gz" files/ backup/</code> Synchroniser tout le répertoire files sauf les fichiers .sql.gz.</p>
+    <p>Note : en général, on suffixe toujours par un <code>/</code> le nom des répertoires sources et de destination.</p>
   </div>
 
   <div id="sed" class="block block-sed cream">
@@ -296,7 +297,7 @@
     <p><code>ps aux</code> Afficher tous les processus exécutés.</p>
     <p><code>ps faux</code> Afficher tous les processus exécutés affiché sous forme.</p>
     <p><code>kill pid</code> Arrêter un processus.</p>
-    <p><code>kill ­9 pid</code> Tuer le processus.</p>
+    <p><code>kill ­9 pid</code> Tuer violemment le processus (déconseillé).</p>
   </div>
 
 <!--
@@ -314,7 +315,8 @@
   <div id="diskspace" class="block block-diskspace">
     <a name="diskspace"></a>
     <h2>Espace disque</h2>
-    <h4>La commande <strong><i>du</i></strong> est utile pour connaitre la répartition de l'espace d'un disque dur.</h4>
+    <p><code>du -sh dossier1 dossier2</code> utile pour connaitre l'occupation de l'espace disque (<em>disk usage</em>).</p>
+    <p><code>df -h</code> utile pour connaitre l'espace disque disponible (<em>disk free</em>).</p>
     <p><code>top</code> Classement en live des processus en cours triés par utilisation Proc, Mem ou Temps CPU.</p>
   </div>
 
@@ -343,13 +345,13 @@
   <div id="test" class="block block-test">
     <a name="test"></a>
     <h2>test</h2>
-    <h4>La commande <strong>test</strong> permet comparer des chaines de caractères, des nombres et vérifier certaines propriétés de fichiers. Il est possible de simplifier sont écriture en la remplaçant par des crochets [ ].</h4>
+    <h4>La commande <strong>test</strong> permet comparer des chaines de caractères, des nombres et vérifier certaines propriétés de fichiers. Il est possible de simplifier son écriture en la remplaçant par des crochets [ ].</h4>
     <p><code>test -e foo.txt</code> tester si le fichier foo.txt existe.</p>
     <p><code>test -d foo</code> tester si  existe et qu'il soit un répertoire.</p>
     <p><code>test -f foo.txt</code> .</p>
     <p><code>test -w foo.txt</code> tester si le fichier est accessible en écriture.</p>
     <p><code>test -x foo.txt</code> tester si le fichier est exécutable.</p>
-    <p><code>[ string1 != string ]</code> vérifier que la chaine strign1 n'est pas égale à string2.</p>
+    <p><code>[ "string1" != "string2" ]</code> vérifier que la chaine string1 n'est pas égale à string2.</p>
     <p><code>[ int1 != int2 ]</code> vérifier que le nombre int1 est inférieur à int2.</p>
   </div>
 
